--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   --text: #e5e7eb;
   --th-bg: #020617;
   --input-bg: #020617;
+  --btn-bg: linear-gradient(135deg, #1e3a8a, #2563eb);
+  --btn-text: #e5e7eb;
 }
 
 /* 🌞 라이트 모드 */
@@ -23,6 +25,8 @@ body.light {
   --text: #0f172a;
   --th-bg: #e5e7eb;
   --input-bg: #ffffff;
+  --btn-bg: linear-gradient(135deg, #2563eb, #3b82f6);
+  --btn-text: #ffffff;
 }
 
 /* ===== 기본 ===== */
@@ -39,21 +43,21 @@ body {
   color: var(--text);
 }
 
-/* 🔮 배경 연기 */
-body::before,
-body::after {
+/* 🔮 다크모드 전용 연기 */
+body:not(.light)::before,
+body:not(.light)::after {
   content: "";
   position: absolute;
   inset: -50%;
   background:
     radial-gradient(circle at 30% 40%, rgba(59,130,246,0.08), transparent 40%),
     radial-gradient(circle at 70% 60%, rgba(99,102,241,0.07), transparent 45%);
-  animation: smokeMove 20s linear infinite;
+  animation: smokeMove 22s linear infinite;
   pointer-events: none;
 }
 
-body::after {
-  animation-duration: 30s;
+body:not(.light)::after {
+  animation-duration: 32s;
   opacity: 0.6;
 }
 
@@ -77,7 +81,7 @@ table {
   border-collapse: collapse;
   min-width: 300px;
   background: var(--table-bg);
-  box-shadow: 0 20px 60px rgba(0,0,0,.5);
+  box-shadow: 0 20px 60px rgba(0,0,0,.4);
 }
 
 th, td {
@@ -115,18 +119,19 @@ button {
   font-size: 22px;
   font-weight: 900;
   cursor: pointer;
-  background: linear-gradient(135deg, #1e3a8a, #2563eb);
-  color: #e5e7eb;
+  background: var(--btn-bg);
+  color: var(--btn-text);
   border: 3px solid #facc15;
   border-radius: 20px;
-  box-shadow: 0 0 35px rgba(37,99,235,0.7);
+  box-shadow: 0 0 30px rgba(37,99,235,.6);
+  transition: transform .15s ease, box-shadow .15s ease;
 }
 
 button:hover {
   transform: scale(1.05);
 }
 
-/* 🌗 모드 토글 버튼 */
+/* 🌗 모드 토글 */
 .mode-toggle {
   position: fixed;
   top: 20px;
@@ -137,6 +142,9 @@ button:hover {
   border-radius: 12px;
   cursor: pointer;
   z-index: 3;
+  background: var(--table-bg);
+  color: var(--text);
+  border: 1px solid var(--border);
 }
 
 /* 결과 색 */
@@ -147,12 +155,10 @@ button:hover {
 
 <body>
 
-<!-- 🌗 모드 버튼 -->
 <button class="mode-toggle" onclick="toggleMode()">🌙 다크</button>
 
 <div class="wrap">
 
-  <!-- 입력 -->
   <table>
     <tr><th colspan="3">멤버 적는곳</th></tr>
     <tr><th>탑</th><td><input id="top1"></td><td><input id="top2"></td></tr>
@@ -162,12 +168,10 @@ button:hover {
     <tr><th>서폿</th><td><input id="sup1"></td><td><input id="sup2"></td></tr>
   </table>
 
-  <!-- 버튼 -->
   <div class="center-btn">
     <button onclick="shuffleTeams()">🎲 랜덤 섞기</button>
   </div>
 
-  <!-- 결과 -->
   <table>
     <tr>
       <th></th>
@@ -184,6 +188,9 @@ button:hover {
 </div>
 
 <script>
+const r = k => document.getElementById('r_'+k);
+const b = k => document.getElementById('b_'+k);
+
 function shuffleTeams() {
   const roles = [
     ['top','top1','top2'],
@@ -193,24 +200,17 @@ function shuffleTeams() {
     ['sup','sup1','sup2']
   ];
 
-  for (const [key,a,b] of roles) {
+  for (const [key,a,bid] of roles) {
     const p1 = document.getElementById(a).value.trim();
-    const p2 = document.getElementById(b).value.trim();
+    const p2 = document.getElementById(bid).value.trim();
     if (!p1 || !p2) return alert('모든 포지션에 2명씩 입력하세요');
 
-    if (Math.random() < 0.5) {
-      r(key).textContent = p1;
-      b(key).textContent = p2;
-    } else {
-      r(key).textContent = p2;
-      b(key).textContent = p1;
-    }
+    Math.random() < 0.5
+      ? (r(key).textContent=p1, b(key).textContent=p2)
+      : (r(key).textContent=p2, b(key).textContent=p1);
   }
 }
-const r = k => document.getElementById('r_'+k);
-const b = k => document.getElementById('b_'+k);
 
-/* 🌗 모드 전환 */
 function toggleMode() {
   document.body.classList.toggle('light');
   document.querySelector('.mode-toggle').textContent =
